--- a/tests/tests.html
+++ b/tests/tests.html
@@ -12,7 +12,7 @@
 
 
     <script src="tinytest.js"></script>
-    <script src="../src/js/calculator.js"></script>
+<!--     <script src="../src/js/calculator.js"></script> -->
     <script src="calculatorTesting.js"></script>
 </body>
 
